Doc Update and Cleanup
- doc: list external dependencies
- CMakeLists:
  - do not use double IF NOT, invert logic
  - add comment about static hdf5 libs that lack -fPIC on 64bit
    which prevents building a shared libSplash from a static only libhdf5.a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,13 +35,15 @@ PROJECT(libSplash)
 #set helper pathes to find libraries and packages
 #- you need the multiarch dir x86_64-linux-gnu on 64bit Ubuntu's with
 #  self-compiled compilers
-SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}" "$ENV{HDF5_ROOT}")
+SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/" "$ENV{MPI_ROOT}"
+                      "$ENV{HDF5_ROOT}")
 
 #-------------------------------------------------------------------------------
 
 # install prefix
 IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-    SET(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}" CACHE PATH "install prefix" FORCE)
+    SET(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}" CACHE PATH "install prefix"
+        FORCE)
 ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT) 
 
 #-------------------------------------------------------------------------------
@@ -51,6 +53,9 @@ FIND_PACKAGE(HDF5 REQUIRED)
 INCLUDE_DIRECTORIES(SYSTEM ${HDF5_INCLUDE_DIR})
 
 # check if static version of HDF5 is used
+#   CMake prefers .so/shared libraries                 
+#   if we find a static HDF5 lib in the ${HDF5_LIBRARIES}
+#   it means there is only a static version installed
 SET(HDF5_IS_STATIC 0)
 STRING(FIND "${HDF5_LIBRARIES}" "hdf5.a" HDF5_IS_STATIC)
 
@@ -115,14 +120,14 @@ AUX_SOURCE_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/tools" TOOLS_SOURCES)
 #-------------------------------------------------------------------------------
 
 # build libsplash shared (if shared HDF5 is used)
-IF(NOT HDF5_IS_STATIC)
-    ADD_LIBRARY(splash SHARED ${LIBRARY_SOURCES})
-    TARGET_LINK_LIBRARIES (splash ${SPLASH_LIBS})
-ELSE(NOT HDF5_IS_STATIC)
+IF(HDF5_IS_STATIC)
     MESSAGE(WARNING "Skipping dynamic libSplash because HDF5 library is static")
-ENDIF(NOT HDF5_IS_STATIC)
+ELSE(HDF5_IS_STATIC)
+    ADD_LIBRARY(splash SHARED ${LIBRARY_SOURCES})
+    TARGET_LINK_LIBRARIES(splash ${SPLASH_LIBS})
+ENDIF(HDF5_IS_STATIC)
 
-#build libsplash static
+# build libsplash static
 ADD_LIBRARY(splash_static STATIC ${LIBRARY_SOURCES})
 SET_TARGET_PROPERTIES(splash_static PROPERTIES OUTPUT_NAME splash)
 TARGET_LINK_LIBRARIES (splash_static ${SPLASH_LIBS})
