Rebased Draft of Deb Packing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -242,6 +242,63 @@ IF(WITH_TOOLS)
     INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tools/splash2xdmf.py DESTINATION bin)
 ENDIF(WITH_TOOLS)
 
+#-------------------------------------------------------------------------------
 
+# Packaging
+# Reference for variables: http://www.cmake.org/Wiki/CMake:CPackConfiguration
 
+SET(CPACK_GENERATOR "DEB;TGZ;TBZ2;ZIP")
+
+SET(CPACK_PACKAGE_NAME "libsplash") # lower case required (debian policy)
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Simple Parallel file output Library for "
+                                      "Accumulating Simulation data using Hdf5")
+SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
+# a valid email is required - happy spamming :)
+SET(CPACK_PACKAGE_CONTACT "Felix Schmitt <...>")
+SET(CPACK_PACKAGE_VENDOR "ZIH and HZDR")
+
+SET(CPACK_PACKAGE_VERSION_MAJOR "${SPLASH_VERSION_MAJOR}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${SPLASH_VERSION_MINOR}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${SPLASH_VERSION_PATCH}")
+SET(CPACK_PACKAGE_VERSION "${SPLASH_VERSION_MAJOR}.${SPLASH_VERSION_MINOR}.${SPLASH_VERSION_PATCH}")
+
+# what is that var for?
+SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
+
+# ship (strip) all found executables
+SET(CPACK_STRIP_FILES ON)
+# do not ship source files (packed in a weird absolute dir)
+SET(CPACK_SOURCE_STRIP_FILES OFF)
+#SET(CPACK_PACKAGE_EXECUTABLES "MyExecutable" "My Executable") # only required by NSIS ?
+
+# DEB specific
+# CPACK_DEBIAN_PACKAGE_MAINTAINER <- CPACK_PACKAGE_CONTACT
+# CPACK_DEBIAN_PACKAGE_NAME <- CPACK_PACKAGE_NAME
+# CPACK_DEBIAN_PACKAGE_VERSION <- CPACK_PACKAGE_VERSION
+# CPACK_DEBIAN_PACKAGE_DESCRIPTION <- CPACK_PACKAGE_DESCRIPTION_SUMMARY
+# CPACK_DEBIAN_PACKAGE_SECTION : default is "devel"
+# CPACK_DEBIAN_PACKAGE_PRIORITY : default is "optional"
+# CPACK_DEBIAN_PACKAGE_RECOMMENDS : policy?
+# CPACK_DEBIAN_PACKAGE_SUGGESTS : policy?
+# CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA : pos/pre inst/rm scripts
+# `dpkg --print-architecture
+SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64") # default is i386
+# the dev packages are a little bit too much, but since there is a lack of
+# convenient named meta packages we use them to trigger the dependencies
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS
+    "libhdf5-openmpi-dev (>= 1.8.6) | libhdf5-mpich2-dev (>= 1.8.6) | "
+    "libhdf5-serial-dev (>= 1.8.6)"
+   )
+# deb-src support
+# DEBIAN_PACKAGE_BUILDS_DEPENDS : not implemented by cmake yet?
+
+# create or creates specific library names like ???
+#  libsplash.so     -> libsplash.so.1
+#  libsplash.so.1   -> libsplash.so.1.1
+#  libsplash.so.1.1 -> libsplash.so.1.1.0
+
+# has to be included after all vars are set
+INCLUDE(CPack)
 
