Add Patch Lvl Reading to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,15 +51,17 @@ ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 # whats my version?
 FILE(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/src/include/splash/version.hpp"
      SPLASH_VERSION_MAJOR_HPP REGEX "#define SPLASH_VERSION_MAJOR ")
-
 FILE(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/src/include/splash/version.hpp"
      SPLASH_VERSION_MINOR_HPP REGEX "#define SPLASH_VERSION_MINOR ")
+FILE(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/src/include/splash/version.hpp"
+     SPLASH_VERSION_PATCH_HPP REGEX "#define SPLASH_VERSION_PATCH ")
 
 STRING(REGEX MATCH "([0-9]+)" SPLASH_VERSION_MAJOR
                             ${SPLASH_VERSION_MAJOR_HPP})
 STRING(REGEX MATCH "([0-9]+)" SPLASH_VERSION_MINOR
                             ${SPLASH_VERSION_MINOR_HPP})
-SET(SPLASH_VERSION_PATCH 0)
+STRING(REGEX MATCH "([0-9]+)" SPLASH_VERSION_PATCH
+                            ${SPLASH_VERSION_PATCH_HPP})
 
 SET(SPLASH_VERSION "${SPLASH_VERSION_MAJOR}.${SPLASH_VERSION_MINOR}.${SPLASH_VERSION_PATCH}")
 MESSAGE(STATUS "Building libSplash version ${SPLASH_VERSION}")
