Add platform and feature specific package builds
  - works with mpich2
  - works with serial libSplash and with/without TOOLS_MPI
  - supports -dbg packages
  - create a meaningful package name (see e.g. hdf5 package names)
  - adds all relevant meta information
  - is always a "dev" versions because it ships headers too
  - Travis: install by package manager

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ compiler:
 
 env:
   global:
-    - SPLASH_ROOT=~/lib/splash
     - BUILD=~/buildTmp
     - SRC=$TRAVIS_BUILD_DIR
   matrix:
@@ -21,8 +20,9 @@ env:
 script:
   - cd $BUILD
 # compile libSplash and install
-  - cmake -DTOOLS_MPI=$SPLASHMPI -DCMAKE_INSTALL_PREFIX=~/lib/splash $SRC
-  - make install
+  - cmake -DTOOLS_MPI=$SPLASHMPI $SRC
+  - make package
+  - sudo dpkg -i libsplash*.deb
   - rm -rf $BUILD/*
 # compile examples/
   - cmake -DWITH_MPI=$SPLASHMPI $SRC/examples
