Add Maintainer EMail (@f-schmitt-zih)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,7 +256,7 @@ SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 # a valid email is required - happy spamming :)
-SET(CPACK_PACKAGE_CONTACT "Felix Schmitt <...>")
+SET(CPACK_PACKAGE_CONTACT "Felix Schmitt <felix.schmitt@zih.tu-dresden.de>")
 SET(CPACK_PACKAGE_VENDOR "ZIH and HZDR")
 # CPACK_PACKAGING_INSTALL_PREFIX : default is "/usr" for deb and rpm
 
