--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -108,3 +108,8 @@ FOREACH(TEST_FILE ${TEST_FILES})
 
     TARGET_LINK_LIBRARIES(${FILE}.out ${LIBS})
 ENDFOREACH()
+
+# copy scripts to "build" dir for easy testing
+FILE(COPY readBool.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+FILE(COPY run_tests DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+FILE(COPY run_parallel_tests DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
