--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -110,6 +110,6 @@ FOREACH(TEST_FILE ${TEST_FILES})
 ENDFOREACH()
 
 # copy scripts to "build" dir for easy testing
-FILE(COPY readBool.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+FILE(COPY readBoolChar.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 FILE(COPY run_tests DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 FILE(COPY run_parallel_tests DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
