Define Length of ColTypeString as in strlen()
thx for @f-schmitt-zih for the feedback!

also: adds more comments to the tests about the absolutely
necessary '\0' terminator for HDF5 (tested: fails without
it!) as described in
  https://hdfgroup.org/HDF5/doc/RM/RM_H5T.html#Datatype-SetSize

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,4 +65,6 @@ before_script:
   - export HDF5_DIR=/usr
   - export C_INCLUDE_PATH=/usr/lib/openmpi/include
   - pip install --user h5py
+  - python -c "import numpy; print(numpy.version.version)"
+  - python -c "import h5py; print(h5py.version.version)"
   - mkdir -p $BUILD ~/lib
