Travis: Run tests in "script"
After-Script non-zero return types do NOT mark the
build as failed:
  http://docs.travis-ci.com/user/build-lifecycle/

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ script:
 # compile and run tests/
   - cmake -DWITH_MPI=$SPLASHMPI $SRC/tests
   - make
-
-after_script:
+# run tests
   - $SRC/tests/run_tests $BUILD
   - $SRC/tests/run_parallel_tests $BUILD
 
