--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,16 @@ project(Splash
 ) #LANGUAGES CXX
 
 
+# CMake policies ##############################################################
+#
+# Search in <PackageName>_ROOT:
+#   https://cmake.org/cmake/help/v3.12/policy/CMP0074.html
+
+if(POLICY CMP0074)
+    cmake_policy(SET CMP0074 NEW)
+endif()
+
+
 # Options and Variants ########################################################
 #
 function(splash_option name description default)
